# epana.old

./: .gitignore  .requirements.txt.swp  AUTHORS  ChangeLog  Makefile  README.md  patient_id_integrity.ipython  requirements.txt  setup.cfg  setup.py  test.xlsx
debian/: changelog  control  files  rules
src/: tabular.py
test/: tabular_test.py
vagrant/: Vagrantfile
