[metadata]
name = epana
summary = analysis utilities
description-file = README.md
author = Evan Phelps
author-email = evan.phelps@gmail.com
classifier = 
	Environment :: EP
	Intended Audience :: Analysts
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[files]
packages = epana

#[easy_install]

[bdist_wheel]
universal = 1

